--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
+        <!-- css personalizado -->
+        <link rel="stylesheet" href="css/estilos.css">
+
     </head>
 
     <body>
@@ -23,9 +26,9 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbar">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Inicio</a>
+                                    <a class="nav-link" href="index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="">Menu</a>
@@ -34,10 +37,10 @@
                                     <a class="nav-link" href="">Empresa</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Contacto</a>
+                                    <a class="nav-link" href="paginas/Contacto.html">Contacto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Preguntas-frecuentes</a>
+                                    <a class="nav-link" href="">Faq</a>
                                 </li>
                             </ul>
                             
@@ -45,8 +48,40 @@
                     </div>
                 </nav>
             </header>
-            <main></main>
-            <footer></footer>
+
+            <main class="row">
+                <section class="hero">
+                    <div class="hero__left">
+                        <h1 class="hero__subtitle">No es solo una cerveza</h1>
+                        <h2 class="hero__subtitle">Esto es <span>KUSHKA</span>.</h2>
+                        <p>Lo único que hace falta para que gente distinta se lleve bien es un interés común... y unas cervezas. "La mejor Cerveza no es necesariamente la mas cara, sino la que se comparte".</p>
+                    </div>
+                    <div class="hero__right">
+                        <img src="Multimedia/Cerveza-artesanal-1.jpg" alt="Ilustracion de bebida">
+                    </div>
+                </section>
+                <hr>
+                <section class="section__one">
+                    <!--imagen con un elace al proceso de fabricacion de la cerveza-->
+                    <div class="section__left">
+                        <a href="pages/fabrica.html"><img src="Multimedia/fabrica.jpg" alt="imagen de una fabrica"></a>
+                    </div>
+                    <div class="section__right">
+                        <h1 class="section__title">La Fabrica</h1>
+                        <p>El proceso de fabricación de la cerveza es fundamental y debe formar parte de la evolución y aprendizaje de cualquier Cervecista. Conozca el exhaustivo proceso productivo y los materiales de primera calidad que usamos para hacer KUSHKA</p>
+                    </div>
+                </section>
+            </main>
+            <hr>
+            <footer class="footer">
+                <img src="Multimedia/logo-k-solo.jpg" alt="Logo de KUSHKA" width="40" height="40">
+                <div>
+                    <img src="Multimedia/logo-whatapps-grande.png" alt="logo de whathapps" width="40" height="40">
+                    <img src="Multimedia/face-cuadrado.png" alt="logo de facebook" width="40" height="40">
+                    <img src="multimedia/logo-instagran.jpg" alt="logo de instagram" width="40" height="40">
+                </div>
+                <p class="footer__copy">Derechos Reservados - <a class="#">KUSHKA</a></p>
+            </footer>
         </div>
     
     </body>
