--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- css personalizado -->
         <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/otra.css">
 
     </head>
 
@@ -64,7 +65,7 @@
                 <section class="section__one">
                     <!--imagen con un elace al proceso de fabricacion de la cerveza-->
                     <div class="section__left">
-                        <a href="pages/fabrica.html"><img src="Multimedia/fabrica.jpg" alt="imagen de una fabrica"></a>
+                        <a href=""><img src="Multimedia/fabrica.jpg" alt="imagen de una fabrica"></a>
                     </div>
                     <div class="section__right">
                         <h1 class="section__title">La Fabrica</h1>
